Change log for zeit.web
=======================

1.69 (unreleased)
-----------------

- ZON-2083: Larger article images for twitter & facebook meta

- ZON-2205: Change URL to cached version of adcontroller

- ZON-2177: Rework Meetrics structure for teasers

- QUICKFIX: Fix images to endure new fallback image URL

- ZON-2123: Show topic links on homepage exclusively


1.68 (2015-09-12)
-----------------

- ZON-2109: Add SEO meta links for dynamic cps

- MAINT: Polish portraitbox, large teaser headlines on mobile,
         advertising background-color and servicebox link styles

- ZON-1892: Add Buzz-Board

- ZON-2197: Allow specifying a host, not just a path, for ``asset_prefix``

- ZON-2014: Enforce mobile image display

- MAINT: Update x-styles

- QUICKFIX: Make Keywordpage Titel to h1

- HOTFIX: Show comment moderation only for moderators


1.67 (2015-09-11)
-----------------

- ZON-2056: Add links in comments for community moderators

- ZON-2143: Canonical-URL should omit params & hashes

- ZON-2199: Make link objects work everywhere, not just for ZMO

- ZON-2114: Add cp_extra place 13 for manual addition

- ZON-2077 - Part 2: Put in thema and authoren noindex again

- FIX: Make redirect of cp2015->without configurable, so preview doesn't break


1.66 (2015-09-10)
-----------------

- ZON-2164: Place12 before video on hp and cp_extra for AdPlace12

- ZON-2176: Fix modified date

- ZON-1340: Advertorial Article

- ZON-2125: Assemble identical byline

- QUICKFIX: Swap font files for Tablet Gothic


1.65 (2015-09-10)
-----------------

- ZON-1592: Label "Anzeige" according to "Verlagsangebot"

- ZON-2115: Add Meta Title, Description Ruleset for Keywordpages

- ZON-1984: Storystream CP

- ZON-2181: Validate page number from GET parameter

- FIX: Inherit from newsfeed for all classes in view_feed


1.64 (2015-09-09)
-----------------

- ZON-1901: Verlagsnextread

- ZON-2121: Add styles and scripts for Datenjournalismus

- ZON-2180: Add routes for keyword pages
