@@ -39,14 +39,6 @@
 
 {% block cardstack_head %}
     {% if view.has_cardstack %}
-        <esi:include
-        src="http://www.zeit.de/cardstack-backend/stacks/esi/head?shareUrl={{ request.url }}&static=true" onerror="continue" />
-    {% endif %}
-{% endblock %}
-
-{% block cardstack_bottom %}
-    {% if view.has_cardstack %}
-        <esi:include
-        src="http://www.zeit.de/cardstack-backend/stacks/esi/scripts?shareUrl={{ request.url }}&static=true" onerror="continue" />
+        <esi:include src="http://www.zeit.de/cardstack-backend/stacks/esi/head?shareUrl={{ request.url }}&static=true" onerror="continue" />
     {% endif %}
 {% endblock %}
