@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 import pytest
+import re
 
 
 @pytest.mark.parametrize('url', ['/index', '/zeit-online/article/01'])
@@ -7,7 +8,7 @@ def test_cardstack_should_be_included_in_content_objects(
         testbrowser, url):
     browser = testbrowser(url)
 
-    # To bad. We cannot select namespaces elements on undeclared namespaces.
+    # Too bad. We cannot select namespaces elements on undeclared namespaces.
     # This is why we can't use cssselect.
     esihead = ('<esi:include src="http://www.zeit.de'
                '/cardstack-backend/stacks/esi/head')
@@ -23,3 +24,24 @@ def test_cardstack_should_be_included_in_content_objects(
                '/cardstack-backend/stacks/kekse')
 
     assert esibody in browser.contents
+
+
+def test_cardstack_should_have_static_param_on_cps(
+        testbrowser):
+    url = '/index'
+    browser = testbrowser(url)
+
+    esihead = ('<esi:include src="http://www.zeit.de'
+               '/cardstack-backend/stacks/esi/head.*static=true')
+
+    assert re.search(esihead, browser.contents)
+
+
+def test_cardstack_should_have_static_param_on_articles(testbrowser):
+    url = '/zeit-online/article/01'
+    browser = testbrowser(url)
+
+    esihead = ('<esi:include src="http://www.zeit.de'
+               '/cardstack-backend/stacks/esi/head.*static=true')
+
+    assert not re.search(esihead, browser.contents)
