@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-2123: Show topic links on homepage exclusively
 
+- ZON-2203: Add static cardstack parameter on CPs
+
 
 1.68 (2015-09-12)
 -----------------
